@@ -1,3 +1,8 @@
+20130828
+ - (djm) [openbsd-compat/bsd-snprintf.c] teach our local snprintf code the
+   'j' (intmax_t/uintmax_t) and 'z' (size_t/ssize_t) conversions in case we
+   start to use them in the future.
+
 20130821
  - (djm) OpenBSD CVS Sync
    - djm@cvs.openbsd.org 2013/08/06 23:03:49
